k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vendfinder
  labels:
    name: vendfinder
    app: vendfinder-poll
